#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-08
2014-05-19 David
- correct how multi value epics pv's are translated.
- track ticket #301.

Tag: V00-01-07
2014-05-18 David
- fix bug when translating calibrated cspad in the presence of damaged 
  cspad that caused the same h5 group for the cspad src to be created 
  twice, causing a crash. fix bug, trac ticket #302.

Tag: V00-01-06
2014-05-16 David
- add unit test for epics
- step for trac ticket #301

Tag: V00-01-05
2014-05-15 David
- use file and memory h5 typeids
- first step for trac ticket #301

Tag: V00-01-04
2014-05-08 David
- update for psddldata V01-00-09, bld GMD v2
- trac ticket #300

Tag: V00-01-03
2014-05-02 David
- update for psddldata V01-00-08, epix 10k
- trac ticket #295

Tag: V00-01-02
2014-04-21 David
- Write both fixed sized ndarrays and vlen ndarrays.
- Add _vlen to ndarray type group names. Necessary to distinguish 
  'translate_vlen:key' from 'key' (See ticket:289). 

Tag: V00-01-01
2014-04-17 David
- Replace NDArray group name with fully qualified type names like
  ndarray_uint8_2 or ndarray_const_uint8_2. Necessary to keep hdf5 path names
  unique when event keys differ only by ndarry template params.
- Add attributes to type, src, and src__key group names to reconstruct
  parameters like event key and template parameters without parsing path.
	

Tag: V00-01-00
2014-04-15 David
- First production tag for replacing o2o-translate. Changes:
- Don't create src alias links. remove create_alias_links option
- switch calibration handling to be backward compatible with o2o-translate
- remove include_uncalibrated_data and excluce_calibrated_data switches